--- a/css/css1.css
+++ b/css/css1.css
@@ -13,6 +13,7 @@
 			width:100%;
 			z-index: 2;
 			-webkit-transition:height .5s;transition:height .5s;
+			min-width: 1200px;
 		}
 		.wrapper-top{
 			width: 100%;
